<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:res-auto="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_listType"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_listType"
        res-auto:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/listType_all"
                    android:title="@string/listType_all"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/listType_inprogress"
                    android:title="@string/listType_InProgress"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/listType_completed"
                    android:title="@string/listType_Completed"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/listType_onhold"
                    android:title="@string/listType_onhold"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/listType_dropped"
                    android:title="@string/listType_dropped"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/listType_planned"
                    android:title="@string/listType_planned"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/customList1"
                    android:title="@string/layout_card_loading"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/customList2"
                    android:title="@string/layout_card_loading"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/customList3"
                    android:title="@string/layout_card_loading"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/customList4"
                    android:title="@string/layout_card_loading"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/customList5"
                    android:title="@string/layout_card_loading"
                    res-auto:showAsAction="never" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        res-auto:showAsAction="always">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/sort_title"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/sort_score"
                    android:title="@string/sort_score"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/sort_type"
                    android:title="@string/sort_type"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/sort_status"
                    android:title="@string/sort_status"
                    res-auto:showAsAction="never" />
                <item
                    android:id="@+id/sort_progress"
                    android:title="@string/sort_progress"
                    res-auto:showAsAction="never" />
            </group>

            <item
                android:id="@+id/menu_inverse"
                android:title="@string/menu_inverse"
                android:checkable="true"
                res-auto:showAsAction="never"/>

            <item
                android:id="@+id/menu_details"
                android:title="@string/menu_details"
                android:checkable="true"
                res-auto:showAsAction="never"/>
        </menu>
    </item>

    <item
        android:id="@+id/forceSync"
        android:icon="@drawable/ic_autorenew"
        android:title="@string/menu_sync"
        res-auto:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_prompt"
        res-auto:actionViewClass="android.support.v7.widget.SearchView"
        res-auto:showAsAction="collapseActionView|always" />
</menu>
